# template

./: README.md  environment.yaml  generate_environment.py  pyproject.toml  rename_template.py  requirements-dev.txt
.github/workflows/: conda_tests.yaml  tests.yaml  venv_tests.yaml
docs/: README.txt
src/template/util/: helper_functions.py
test/util/: test_helper_functions.py
tests/: test_environment_generation.py
