[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
version = "0.0.0"
dependencies = [
    "ipympl",
    "ipywidgets",
    "loguru",
    "matplotlib",
    "scipy",
    "pyserial",  # installs as serial
    "pandas",
    "xarray",
]
requires-python = ">=3.9"

#[tool.setuptools.dynamic]
#dependencies = { file = ["requirements.txt"] }

authors = [
  {name = "Karl Kappler", email = "magnetotellurics@gmail.com"},
]

description = "Tools for working with template data"
keywords = ["template", ]
readme = "README.md"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "ipython",
    "nbsphinx",
    "numpydoc",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "toml",
    "sphinx_gallery",
    "sphinx_rtd_theme",
]


[project.urls]
Repository = "https://github.com/kkappler/template.git"
"Bug Tracker" = "https://github.com/kkappler/template/issues"

[tool.pytest.ini_options]
# pythonpath = "src"
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]
